# agh_wfiis_pads_project2

./: .clang-format  CMakeLists.txt  README.md  fft_parallel.cpp
